2006-06-22  Paolo Borelli  <steve@istique.net>

	* gtksourceview/gtksourceview.c: fix bug #345252 – Automatic
	indentation does not work with keypad enter.

=== gtksourceview 1.6.1 ===

2006-04-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.6.1

2006-04-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: constify the drop target list.

2006-04-09  Steve Frécinaux  <steve@istique.net>

	* configure.ac:
	* po/LINGUAS:
	
	Move ALL_LANGUAGES content to the po/LINGUAS file, to make our
	translators' life easier.

2006-04-09  Luca Cavalli  <loopback@slackit.org>

	* gtksourceview/language-specs/desktop.lang: add some missing
	keywords. Fixes bug #337743.

2006-04-08  Steve Frécinaux  <steve@istique.net>

	* gtksourceview/language-specs/xml.lang: added text/xsl in the xml
	mimetype list (quick and dirty fix for bug #335193)

2006-04-06  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/ruby.lang: fixes bug #336788 – Patch to
	make namespaced ruby constants display correctly (patch by
	Gabriel Bauman <gbauman@gmail.com>)	

2006-04-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: consume the button press event
	in the line numbers margin.

2006-03-25  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-17  Steve Frécinaux  <steve@istique.net>

	* gtksourceview/language-specs/perl.lang: fix 334853 by removing
	elseif keyword.

2006-03-15  Steve Frécinaux  <steve@istique.net>

	* gtksourceview/language-specs/php.lang: add a few PHP5 keywords:
	try, catch, throw, implements, final.

=== gtksourceview 1.6.0 ===

2006-03-12  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.6.0

2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Add "zh_HK" to ALL_LINGUAS.

=== gtksourceview 1.5.7 ===

2006-01-16  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README: